--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "papaparse": "^5.5.3",
+    "pg": "^8.16.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "winston": "^3.17.0"
   },
@@ -43,6 +45,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.17",
     "@types/papaparse": "^5.3.16",
+    "@types/pg": "^8.15.4",
     "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
