--- a/.env
+++ b/.env
@@ -1,9 +1,16 @@
-PORT=5000
-DB_NAME=my_db
-DB_USER=root
-DB_PASSWORD=@Hossin2017
-DB_HOST=localhost
-DB_PORT=3306
+# PORT=5000
+# DB_NAME=my_db
+# DB_USER=root
+# DB_PASSWORD=@Hossin2017
+# DB_HOST=localhost
+# DB_PORT=3306
 
 
 SECRET_KEY=your_secret_key
+
+PORT=5000
+DB_NAME=my_db
+DB_USER=root
+DB_PASSWORD=wHutKPz41bYzw1ez3Dh4hj1O
+DB_HOST=kind-goldstine-iu5auxikv-db
+DB_PORT=5432
