--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/server.js",
-    "engines": {
+  "main": "dist/app.js",
+  "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server.js",
+    "start": "node dist/app.js",
     "build": "tsc",
-    "dev": "nodemon --exec ts-node src/server.ts",
+    "dev": "nodemon --exec ts-node src/app.ts",
+    "clean": "rimraf -rf dist/*",
     "migrate": "ts-node src/models/index.ts"
   },
   "keywords": [],
@@ -32,7 +33,6 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
-    "papaparse": "^5.5.3",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
@@ -48,10 +48,10 @@
     "@types/mssql": "^9.1.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.17",
-    "@types/papaparse": "^5.3.16",
     "@types/pg": "^8.15.4",
     "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.10",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
